# convey

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  readme.md  target.md  turbo.json
apps/api/: .air.toml  .gitignore  README.md  eslint.config.js  go.mod  go.sum  manage.py  nitro.config.ts  package.json  prettier.config.js  pyproject.toml  readme.md  sqlc.yaml
apps/api/cmd/: main.go
apps/api/cmd/cli/: main.go
apps/api/internal/config/: config.go
apps/api/internal/database/: database.go
apps/api/internal/database/migrations/: 20250721161626_init.sql
apps/api/internal/db/: db.go
apps/api/internal/db/migrations/: 00001_init.sql  00001_users.sql  00002_propostas.sql  20250721161626_init.sql  20250721192049_init.sql
apps/api/internal/db/seeds/: 00001_init.sql  00001_users.sql  00002_propostas.sql
apps/api/internal/health/: handler.go
apps/api/internal/json/: json.go
apps/api/internal/propostas/: handler.go  models.go  queries.sql  serializers.go  services.go
apps/api/internal/propostas/queries/: models.go  queries.sql.go
apps/api/internal/server/: config.go  handler.go  middleware.go  routes.go  routing.go  server.go
apps/api/src/convey/: api.py  asgi.py  config.py  main.py  settings.py  urls.py  wsgi.py
apps/api/src/data/: maker.ts  schemas.ts
apps/api/src/eutevue/: asgi.py  settings.py  urls.py  wsgi.py
apps/api/src/middleware/: cors.ts  latency.ts
apps/api/src/routes/: index.ts  propostas.ts
apps/api/src/utils/: array.ts  enums.ts  is.ts  random.ts  schemas.ts
(+576 files in other folders)
