[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eutevue"
version = "0.1.0"
description = "."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.1",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "eutevue.settings"
