[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convey"
version = "0.1.0"
description = "."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "httptools>=0.6.4",
    "orjson>=3.10.18",
    "pydantic>=2.11.7",
    "sqlalchemy[mypy,postgresql-asyncpg]>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]

[tool.mypy]
strict = true
